@@ -77,6 +77,11 @@ Changes for v2.03
 - Extend table deletion on main tables to permit deletion of multiple entries in a single action (Graham)
 - When deleting a device upgrade, offer option also to delete key moves that send signals of that upgrade (Graham)
 - Fix bug that converted filename to lower case when saving a .ir file as a .rmir file (Graham)
+- Remove all reference to java "user.dir" and instead explicitly locate the installation folder (Graham)
+- Replace rmir.sh and remotemaster.sh by a Linux setup script Setup.sh that creates two .desktop files (Graham)
+- Add warning and request confirmation if Linux parallel port interface is to be used (Graham)
+- Change several confirmation dialogs to default to the No button (Graham)
+- Add a new startup parameter "-errors" analogous to "-properties" to specify the error file (Graham)
 
 Changes for v2.02
 -- Alpha --
